--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,13 +1,16 @@
-* {
-    box-sizing: border-box;
-  }
+/* Rough css - for quick basic project styling */
   
-  html {
+  html, body {
     font-family: sans-serif;
+    font-size: 16px;
   }
   
   body {
     margin: 0;
+  }
+  
+  * {
+    box-sizing: border-box;
   }
   
   .main-header {
@@ -124,3 +127,14 @@
     color: white;
     margin: 0;
   }
+
+  li {
+    position: relative;
+  }
+    
+  li .card {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 9;
+  } 
